--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
          <ul class="list-unstyled components mb-5">
            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
             <li class="nav-item">
-                     <a class="nav-link" href="#"><span class="text-info"><i style="font-size: 30px" class="fab fa-facebook-square m-2"></i></span></a>
+                     <a class="nav-link" href="https://www.facebook.com/oluokunkabir.adeshina/"  target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-facebook-square m-2"></i></span></a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="#"><span class="text-info"><i style="font-size: 30px" class="fab fa-twitter-square m-2"></i></span></a>
+                     <a class="nav-link" href="https://twitter.com/DevKabirOluokun" target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-twitter-square m-2"></i></span></a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="#"><span class="text-info"><i style="font-size: 30px" class="fab fa-github m-2"></i></span></a>
+                     <a class="nav-link" href="https://github.com/oluokunkabiru" target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-github m-2"></i></span></a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="#"><span class="text-info"><i style="font-size: 30px" class="fab fa-whatsapp-square m-2"></i></span></a>
+                     <a class="nav-link" href="https://wa.me/08130584550"  target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-whatsapp-square m-2"></i></span></a>
                    </li>
                    <li class="nav-item">
-                     <a class="nav-link" href="#"><span class="text-info"><i style="font-size: 30px" class="fab fa-linkedin m-2"></i></span></a>
+                     <a class="nav-link" href="https://www.linkedin.com/in/oluokun-kabir-adesina-58125b163/" target="_blank"><span class="text-info"><i style="font-size: 30px" class="fab fa-linkedin m-2"></i></span></a>
                    </li>
        </nav>    
      </div>
@@ -291,10 +291,10 @@
                           </div>
                           <table class="ml-5 mr-3">
                             <tr>
-                                <td><a href=""><span class="text-light"><i class="fab fa-facebook-square m-2" style="font-size: 30px"></i></span></a></td>
+                                <td><a href="https://www.facebook.com/oluokunkabir.adeshina/"  target="_blank"><span class="text-light"><i class="fab fa-facebook-square m-2" style="font-size: 30px"></i></span></a></td>
                                 <td><a href=""><span class="text-light"><i class="fab fa-whatsapp-square m-2" style="font-size: 30px"></i></span></a></td>
-                                <td><a href=""><span class="text-light"><i class="fab fa-twitter-square m-2" style="font-size: 30px"></i></span></a></td>
-                                <td><a href=""><span class="text-light"><i class="fab fa-github m-2" style="font-size: 30px"></i></span></a></td>
+                                <td><a  href="https://twitter.com/DevKabirOluokun" target="_blank"><span class="text-light"><i class="fab fa-twitter-square m-2" style="font-size: 30px"></i></span></a></td>
+                                <td><a  href="https://github.com/oluokunkabiru" target="_blank" ><span class="text-light"><i class="fab fa-github m-2" style="font-size: 30px"></i></span></a></td>
                             </tr>
                         </table>
                       </div>
@@ -302,7 +302,7 @@
               </div>
               <div class="copy-right-top border-top mt-5">
                   <p class="copy-right text-center text-white pt-xl-5 pt-4">&copy; <span id="y"></span> . All Rights Reserved | Design by
-                      <a href="https://github.com/oluokunkabiru" style="text-decoration: none; color: white;"> <u> Oluokun Kabiru Adesina </u> </a>
+                      <a href="https://github.com/oluokunkabiru" target="_blank" style="text-decoration: none; color: white;"> <u> Oluokun Kabiru Adesina </u> </a>
                   </p>
               </div>
           </footer>
