--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- navigation bar -->
-  <h2 class="text-center">OLUOKUN KABIRU ADESINA</h2>
+  <h2 class="text-center">OLUOKUN KABIR ADESINA</h2>
    <!-- /navigation bar -->
    <nav class="navbar navbar-expand-sm  sticky-top">
     <a class="navbar-brand" href="#">
